Fixed css overflow issue

--- a/core/resources/assets/less/core.less
+++ b/core/resources/assets/less/core.less
@@ -24,7 +24,7 @@ body {
   margin: 0;
   color: #4c5667;
   padding-bottom: 61px;
-  overflow-x: hidden !important;
+/*  overflow-x: hidden !important;*/
 }
 html {
     overflow-x: hidden;
