--- a/core/resources/assets/sass/style.scss
+++ b/core/resources/assets/sass/style.scss
@@ -83,7 +83,7 @@ html.editor-modal {
       /*box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2) !important;*/
       box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.15);
       h1 {
-        margin-top: 7px;
+        margin-top: 8px;
         font-size: 16px;
       }
     }
